force-app/main/default/objects/TTS_Mentoring_Opportunity__c/TTS_Mentoring_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Represents a mentoring engagement sought by a mentee, including required expertise, candidate interest, mentor selection, and engagement dates.</description>
    <label>Mentoring Opportunity</label>
    <nameField>
        <displayFormat>MO-{00000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentoring Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>