force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Applicable_Industries__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Industries__c</fullName>
    <description>Identifies the industries relevant to the mentoring opportunity.</description>
    <inlineHelpText>Select all industries in which mentor experience would benefit the mentee.</inlineHelpText>
    <label>Applicable Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TTS_Industries</valueSetName>
    </valueSet>
</CustomField>