force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <defaultValue>Today()+30</defaultValue>
    <description>Records the date when the opportunity expires if no mentor has been assigned.</description>
    <inlineHelpText>Enter the last date for mentor interest; new records default to 30 days from today.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>