force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the contact seeking mentoring through this opportunity.</description>
    <inlineHelpText>Select the person seeking a mentor.</inlineHelpText>
    <label>Mentee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentoring Opportunities</relationshipLabel>
    <relationshipName>Mentoring_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>