force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the contact assigned as mentor for this opportunity.</description>
    <inlineHelpText>Select the mentor assigned to this opportunity.</inlineHelpText>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentoring Opportunities (Mentor)</relationshipLabel>
    <relationshipName>Mentoring_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>