force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Mentoring_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_End_Date__c</fullName>
    <description>Records the date when the mentoring engagement ends or ended.</description>
    <inlineHelpText>Enter the final date of the mentoring engagement.</inlineHelpText>
    <label>Mentoring End Date</label>
    <type>Date</type>
</CustomField>