force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Mentoring_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Start_Date__c</fullName>
    <description>Records the date when the mentoring engagement begins.</description>
    <inlineHelpText>Enter the first date of the mentoring engagement.</inlineHelpText>
    <label>Mentoring Start Date</label>
    <type>Date</type>
</CustomField>