force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Stores an overview of the mentee's mentoring need and relevant context.</description>
    <inlineHelpText>Describe the mentoring need, desired outcomes, and context a prospective mentor should know.</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>