force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Requested_Skills__c.field-meta.xml
<CustomField>
    <fullName>Requested_Skills__c</fullName>
    <description>Identifies the skills sought from a mentor for this opportunity.</description>
    <inlineHelpText>Select all skills the mentee needs from a mentor.</inlineHelpText>
    <label>Requested Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TTS_Skills</valueSetName>
    </valueSet>
</CustomField>