force-app/main/default/objects/TTS_Mentoring_Opportunity__c/fields/Total_Selected_Interests__c.field-meta.xml
<CustomField>
    <fullName>Total_Selected_Interests__c</fullName>
    <description>Counts related Mentoring Interest records marked as Selected Mentor.</description>
    <inlineHelpText>Shows how many interested mentors are selected; a value above 1 indicates multiple selections.</inlineHelpText>
    <label>Total Selected Interests</label>
    <summaryFilterItems>
        <field>TTS_Mentoring_Interest__c.Selected_Mentor__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Mentoring_Interest__c.Mentoring_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>