force-app/main/default/objects/TTS_Mentoring_Opportunity__c/validationRules/Dates_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_Check</fullName>
    <active>true</active>
    <description>End Date cannot be before Start Date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Mentoring_End_Date__c)),
    Mentoring_End_Date__c &lt;= Mentoring_Start_Date__c
)</errorConditionFormula>
    <errorMessage>End Date Cannot be before the Start Date</errorMessage>
</ValidationRule>