force-app/main/default/objects/TTS_Mentoring_Opportunity__c/validationRules/Ensure_Only_One_Selected_Mentor.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Only_One_Selected_Mentor</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Selected_Interests__c &gt; 1</errorConditionFormula>
    <errorMessage>You can only have one selected Mentor Interest. Please remove any other selected mentors if it was incorrectly set before.</errorMessage>
</ValidationRule>