force-app/main/default/objects/TTS_Mentoring_Opportunity__c/listViews/Open_Mentoring_Opportunities.listView-meta.xml
<ListView>
    <fullName>Open_Mentoring_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Mentee__c</columns>
    <columns>Mentor__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Mentoring Opportunities</label>
</ListView>